Create database models for animals and shelters
Create database models for animals and shelters

--- a/Application_API/Application_API/Application_API.csproj
+++ b/Application_API/Application_API/Application_API.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="Data\Enums\" />
+    <Folder Include="Repositories\Interfaces\" />
   </ItemGroup>
 
 </Project>
